# notes

./: pyproject.toml
django_project/: db.sqlite3
django_project/accounts/: admin.py  models.py
django_project/django_project/: settings.py  urls.py
django_project/notes/: models.py
django_project/notes/migrations/: 0001_initial.py  0002_auto_20240427_2327.py  0003_alter_tag_owner.py  0004_tag_owner.py
django_project/templates/notes/: note_list.html
